fixed spacing on htmls index and about, working on button border style

--- a/css/about.css
+++ b/css/about.css
@@ -184,6 +184,7 @@ img{
 
 footer {
 	width: 100%;
+	height: 20px;
 }
 
 footer nav {
@@ -191,9 +192,10 @@ footer nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 2%;
+    padding: 10px 2%;
 		font-size: 14px;
-		background-color: black;
+		background: black;
+		
 }
 
 footer nav a {
